--- a/buttonIndex.html
+++ b/buttonIndex.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>first git commit</h1>
     <a href="#" id="button"><span>Button</span></a>
     <script src="button.js"></script>
 </body>
