my new branch with commit

--- a/buttonIndex.html
+++ b/buttonIndex.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>second commit</h1>
+    <h2>new Branch</h2>
     <a href="#" id="button"><span>Button</span></a>
     <script src="button.js"></script>
 </body>
